[project]
name = "env-mesmer"
version = "0.1.0"
description = "env for mesmer"
authors = [
    {name = "wuwenrui555",email = "wuwenruiwwr@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10, <3.11"
dependencies = [
    "deepcell (==0.12.6)",
    "pyqupath @ git+https://github.com/wuwenrui555/pyqupath.git@v0.1.0",
    "pycodex @ git+https://github.com/SizunJiangLab/pycodex.git@v0.1.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
